<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Techres - Supplier</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_accountmenu" translatable="false">Tài Khoản</string>
    <string name="welcome_profile_accountmenu" translatable="false">Xin chào,</string>
    <string name="btn_overview" translatable="false">Tổng quan</string>
    <string name="tab_synthesise" translatable="false">Tổng hợp SL</string>
    <string name="btn_report" translatable="false">Quản lý báo cáo</string>
    <string name="text_otp_title_1" translatable="false">Mã xác nhận đã được gửi về số điện thoại</string>
    <string name="text_otp_title_2" translatable="false">Vui lòng nhập mã để hoàn thành</string>
    <string name="text_otp_title_3" translatable="false">Không nhận được mã?</string>
    <string name="txt_resend" translatable="false">Gửi Lại</string>
    <string name="icon_phone" translatable="false">Phone SMS</string>
    <string name="back" translatable="false">back</string>
    <string name="next" translatable="false">Tiếp Tục</string>
    <string name="next_chat" translatable="false">Tiếp</string>
    <string name="create_chat" translatable="false">Tạo</string>
    <string name="txt_verification" translatable="false">Mã xác nhận sẽ gửi về số điện thoại mà bạn đăng ký</string>
    <string name="txt_username" translatable="false">Tên Đăng Nhập</string>
    <string name="input_username" translatable="false">Hãy nhập mã nhân viên của bạn</string>
    <string name="txt_phone" translatable="false">Số Điện Thoại</string>
    <string name="input_pin" translatable="false">Nhập mã xác nhận</string>
    <string name="sum_report_order" translatable="false">Tổng cộng:</string>
    <string name="txt_report_debts" translatable="false">Tổng tiền phải trả</string>
    <string name="txt_report_debty" translatable="false">Tổng tiền phải thu</string>
    <string name="submit" translatable="false">Xác nhận</string>
    <string name="current_inventory" translatable="false">Tồn kho hiện tại</string>
    <string name="input_phone" translatable="false">Hãy nhập số điện thoại đăng ký</string>
    <string name="btn_ConfirmNext" translatable="false">Tiếp Tục</string>
    <string name="btn_order" translatable="false">Quản lý đơn hàng</string>
    <string name="btn_material" translatable="false">Quản lý nguyên liệu</string>
    <string name="btn_employees" translatable="false">Quản lý nhân viên</string>
    <string name="btn_liabilities" translatable="false">Quản lý công nợ khách hàng</string>
    <string name="btn_payment_request" translatable="false">Quản lý phiếu y/c thanh toán</string>
    <string name="btn_revenue_expenditure" translatable="false">Quản lý thu chi</string>
    <string name="debt_manager" translatable="false">Quản lý công nợ</string>
    <string name="btn_warehouse" translatable="false">Quản lý kho</string>
    <string name="btn_customer" translatable="false">Quản lý khách hàng</string>
    <string name="btn_setting" translatable="false">Cài đặt</string>
    <string name="btn_AppReviews" translatable="false">Đánh giá ứng dụng</string>
    <string name="btn_support" translatable="false">Góp ý nhà phát triển</string>
    <string name="btn_info_product" translatable="false">Thông tin sản phẩm</string>
    <string name="enter_employee_code" translatable="false">Tài khoản</string>
    <string name="enter_supplier_name" translatable="false">Tên nhà cung cấp</string>
    <string name="forgotpass_title" translatable="false">Quên Mật Khẩu</string>
    <string name="title_skip_slidewelcome" translatable="false">Bỏ qua</string>
    <string name="name_slidewelcome_1" translatable="false"><b>SUPPLIER</b></string>
    <string name="content_slidewelcome_1" translatable="false">Trợ lý đắc lực cho nhà cung cấp 1</string>
    <string name="text_setting_title" translatable="false">Cài đặt</string>
    <string name="text_setting_nation" translatable="false">Quốc gia</string>
    <string name="text_setting_language" translatable="false">Ngôn ngữ</string>
    <string name="text_setting_notification" translatable="false">Thông báo</string>
    <string name="text_setting_resetpass" translatable="false">Đổi mật khẩu</string>
    <string name="btn_setting_logout" translatable="false">Đăng xuất</string>
    <string name="txt_version" translatable="false">Phiên bản</string>
    <string name="enter_pass" translatable="false">Mật khẩu</string>
    <string name="login" translatable="false">Đăng nhập</string>
    <string name="forgot_pass" translatable="false">Quên mật khẩu?</string>
    <string name="text_hello" translatable="false">Xin chào,</string>
    <string name="please_login" translatable="false">Mời bạn đăng nhập</string>
    <string name="username" translatable="false">Tên đăng nhập</string>
    <string name="pass" translatable="false">Mật khẩu</string>
    <string name="search_hint" translatable="false">Nhập thông tin cần tìm</string>
    <string name="search_hint_contacors" translatable="false">Nhập người liên hệ cần tìm</string>
    <string name="mess_title_newpassword" translatable="false">Hãy đặt lại mật khẩu của bạn</string>
    <string name="text_newpassword" translatable="false">Mật khẩu mới</string>
    <string name="text_acceptnewpassword" translatable="false">Xác nhận mật khẩu</string>
    <string name="hint_newpassword" translatable="false">Hãy nhập mật khẩu của bạn</string>
    <string name="hint_acceptnewpassword" translatable="false">Hãy nhập lại mật khẩu của bạn</string>
    <string name="btn_accept_newpassword" translatable="false">Xác nhận</string>
    <string name="time" translatable="false">Thời Gian</string>
    <string name="customer" translatable="false">Khách hàng</string>
    <string name="chat" translatable="false">Chat</string>
    <string name="chatWork" translatable="false">Công Việc</string>
    <string name="chatPersonal" translatable="false">Cá Nhân </string>
    <string name="chatCustomer" translatable="false">Khách hàng </string>
    <string name="todo" translatable="false">TODO</string>
    <string name="btn_detail" translatable="false">Chi Tiết</string>
    <string name="address" translatable="false">Địa điểm giao</string>
    <string name="txt_product" translatable="false">Sản phẩm:</string>
    <string name="txt_total" translatable="false">Tổng đơn:</string>
    <string name="txt_email" translatable="false">Email</string>
    <string name="edit_search" translatable="false">Nhập thông tin cần tìm</string>
    <string name="text_debt" translatable="false">Công Nợ</string>
    <string name="text_idcode" translatable="false">Mã ID:</string>
    <string name="text_user" translatable="false">Người liên hệ:</string>
    <string name="text_contact" translatable="false">Người liên hệ</string>
    <string name="text_total_detail" translatable="false">Tổng đơn:</string>
    <string name="icon_company_detail" translatable="false">Icon company</string>
    <string name="text_time_detailorder" translatable="false">Thời gian giao hàng:</string>
    <string name="text_number_product_detailorder" translatable="false">Số sản phẩm:</string>
    <string name="text_note_detailorder" translatable="false">Ghi Chú:</string>
    <string name="text_confirm" translatable="false">Xác nhận</string>
    <string name="text_edit" translatable="false">Chỉnh sửa</string>
    <string name="survive_head" translatable="false">Tồn đầu</string>
    <string name="text_trademark" translatable="false">Thương hiệu</string>
    <string name="rename_category" translatable="false">Đổi tên danh mục</string>
    <string name="enter_name_category" translatable="false">Hãy nhập tên danh mục</string>
    <string name="cancel" translatable="false" tools:ignore="ButtonCase">Thoát</string>
    <string name="done" translatable="false">OK</string>
    <string name="title_cancel" translatable="false">Cancel</string>
    <string name="notify_no_category" translatable="false">Bạn chưa có danh mục nào!</string>
    <string name="notify_no_product" translatable="false">Bạn chưa có sản phẩm nào!</string>
    <string name="notify_no_inventory" translatable="false">Tồn kho của bạn đã hết!</string>
    <string name="name_slidewelcome_2" translatable="false"><b>TECHRES</b></string>
    <string name="name_slidewelcome_3" translatable="false"><b>ALOLINE</b></string>
    <string name="content_slidewelcome_2" translatable="false">Trợ lý đắc lực cho nhà cung cấp 2</string>
    <string name="content_slidewelcome_3" translatable="false">Trợ lý đắc lực cho nhà cung cấp 3</string>
    <string name="content_slidewelcome_4" translatable="false">Trợ lý đắc lực cho nhà cung cấp 4</string>
    <string name="renamed_category" translatable="false">Đã đổi tên danh mục</string>
    <string name="renamed_staff" translatable="false">Đã đổi tên nhân viên</string>
    <string name="delete_category" translatable="false">Đã xóa danh mục</string>
    <string name="text_phone" translatable="false">SĐT</string>
    <string name="text_id_order" translatable="false">ID đơn hàng:</string>
    <string name="text_detail" translatable="false">Chi tiết</string>
    <string name="login_label_password_must_not_be_empty" translatable="false">Mật khẩu không được để trống</string>
    <string name="login_label_password_must_not_be_password" translatable="false">Mật khẩu phải lớn hơn 4 ký tư</string>
    <string name="login_label_user_must_not_be_empty" translatable="false">Tên đăng nhập không được để trống</string>
    <string name="login_label_supplier_name_must_not_be_empty" translatable="false">Tên nhà cung cấp không được để trống</string>
    <string name="mess_dialog_detailorderbranch" translatable="false">Vui lòng kiểm tra kỹ thông tin trước khi gửi</string>
    <string name="dialog_btn_edit_detailorderbranch" translatable="false">Chỉnh sửa</string>
    <string name="dialog_btn_cancel_detailorderbranch" translatable="false">Hủy bỏ</string>
    <string name="textview_listproduct_detailorderbranch" translatable="false">DANH SÁCH SẢN PHẨM</string>
    <string name="btn_edit_detailorderbranch" translatable="false">chỉnh sửa</string>
    <string name="btn_confirm_detailorderbranch" translatable="false">Xác nhận</string>
    <string name="btn_resend_detailorderbranch" translatable="false">lưu lại</string>
    <string name="title_detailorderbranch" translatable="false">CHI TIẾT ĐƠN HÀNG</string>
    <string name="api_error" translatable="false">Đã xảy ra lỗi!!! Vui lòng thử lại.</string>
    <string name="dialog_title_logout" translatable="false">Đăng xuất</string>
    <string name="dialog_title_logout_1" translatable="false">Đăng Xuất</string>
    <string name="dialog_content_logout" translatable="false">Bạn có chắc muốn đăng xuất ?</string>
    <string name="table_pagination_details" translatable="false">Page %s, showing items %s - %s.</string>
    <string name="sort_ascending" translatable="false">Sort Ascending</string>
    <string name="save" translatable="false">Lưu thông tin</string>
    <string name="txt_name_specification" translatable="false">Quy cách</string>
    <string name="txt_value_exchange" translatable="false">Giá trị QĐ</string>
    <string name="txt_units_exchange" translatable="false">Đơn vị QĐ</string>
    <string name="txt_create_new_specification" translatable="false">Tạo mới quy cách</string>
    <string name="txt_close" translatable="false">Đóng</string>
    <string name="txt_please_choose" translatable="false">- Vui lòng chọn -</string>
    <string name="default_image" translatable="false">Hình mặc định</string>
    <string name="not_data" translatable="false">0</string>
    <string name="day" translatable="false">Ngày</string>
    <string name="month" translatable="false">Tháng</string>
    <string name="year" translatable="false">Năm</string>
    <string name="input_quantity" translatable="false">Nhập số lượng</string>
    <string name="input_content_note" translatable="false">Nhập nội dung ghi chú...</string>
</resources>