<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/ln_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/dp8"
        tools:viewBindingIgnore="true">

        <ImageView
            android:id="@+id/imageRes"
            android:layout_width="@dimen/dp32"
            android:layout_height="@dimen/dp32"
            android:layout_gravity="center"
            android:background="@drawable/ic_icon_restaurant_main"
            android:contentDescription="@string/default_image" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="@dimen/margin_8dp"
            android:paddingEnd="@dimen/margin_8dp">

            <vn.techres.supplier.view.TechResTextView
                android:id="@+id/txtResName"
                style="@style/AutoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/font_normal" />

            <vn.techres.supplier.view.TechResTextView
                android:id="@+id/txtResAddress"
                style="@style/AutoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/gray_text_title"
                android:textSize="@dimen/text_size_13" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/default_image"
            android:src="@drawable/ic_arrow_drop_down" />
    </LinearLayout>
</layout>