<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:gravity="center">
    <LinearLayout
        android:layout_width="@dimen/dp350"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        android:background="@drawable/corner_white_4dp">
        <vn.techres.supplier.view.TechResTextViewBold
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_quantity"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/font_big"
            android:padding="@dimen/padding_10dp"/>
        <EditText
            android:id="@+id/edtInputQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/not_data"
            android:padding="@dimen/dp10"
            android:background="@drawable/bg_view"
            android:gravity="end"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:inputType="number"
            android:visibility="gone"
            tools:ignore="Autofill" />
        <EditText
            android:id="@+id/edtInputPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/not_data"
            android:padding="@dimen/dp10"
            android:background="@drawable/bg_view"
            android:gravity="end"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:inputType="numberDecimal"
            android:visibility="visible"
            tools:ignore="Autofill" />
        <EditText
            android:id="@+id/edtInputNote"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp200"
            android:hint="@string/input_content_note"
            android:gravity="top"
            android:padding="@dimen/dp10"
            android:background="@drawable/bg_view"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:visibility="gone"
            tools:ignore="Autofill,TextFields" />
        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:text="@string/text_confirm"
            android:textAllCaps="false"
            android:background="@color/main_bg"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_10dp"/>
    </LinearLayout>
</LinearLayout>